FastJet Makefile Modification

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -29,12 +29,12 @@ CXXFLAGS     += $(ROOTCFLAGS)
 LDFLAGS      += $(ROOTLDFLAGS)
 
 # fast jet appde
-CXXFLAGS += $(shell fastjet-install/bin/fastjet-config --cxxflags) 
+CXXFLAGS += $(shell ../fastjet-install/bin/fastjet-config --cxxflags) 
 
 
 
 LIBS = -lRooFitCore -lRooFit -lMinuit -lHtml -lMathMore -lPyROOT -lFoam -lRooStats -lTreePlayer -lTMVA
-LIBS += $(shell fastjet-install/bin/fastjet-config --libs) -I${PWD}/fastjet/lib
+LIBS += $(shell ../fastjet-install/bin/fastjet-config --libs) -I${PWD}/fastjet/lib
 ifneq ($(CMSSW_BASE),)
         ROOTFIT_INCLUDE := $(shell cd $(CMSSW_BASE); scram tool info roofitcore | grep INCLUDE= | sed 's|INCLUDE=||')
         ROOTFIT_LIBDIR := $(shell cd $(CMSSW_BASE); scram tool info roofitcore | grep LIBDIR= | sed 's|LIBDIR=||')
